--- a/Superviseur/fen_superviseur.ui
+++ b/Superviseur/fen_superviseur.ui
@@ -101,7 +101,7 @@
      <enum>Qt::Vertical</enum>
     </property>
    </widget>
-   <widget class="QLineEdit" name="LE_AdresseIP">
+   <widget class="QLineEdit" name="LE_adresseIP">
     <property name="geometry">
      <rect>
       <x>100</x>
@@ -111,7 +111,7 @@
      </rect>
     </property>
    </widget>
-   <widget class="QLineEdit" name="LE_NomSite">
+   <widget class="QLineEdit" name="LE_nomSite">
     <property name="geometry">
      <rect>
       <x>100</x>
@@ -119,6 +119,67 @@
       <width>181</width>
       <height>21</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="comboBox">
+    <property name="geometry">
+     <rect>
+      <x>380</x>
+      <y>80</y>
+      <width>111</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <item>
+     <property name="text">
+      <string>Ecole</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>Médiathèque</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>Mairie</string>
+     </property>
+    </item>
+   </widget>
+   <widget class="QLabel" name="label_3">
+    <property name="geometry">
+     <rect>
+      <x>380</x>
+      <y>60</y>
+      <width>131</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Site distant sauvegardé:</string>
+    </property>
+   </widget>
+   <widget class="QTextEdit" name="textEdit">
+    <property name="geometry">
+     <rect>
+      <x>520</x>
+      <y>30</y>
+      <width>211</width>
+      <height>121</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>650</x>
+      <y>230</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Modifier</string>
     </property>
    </widget>
   </widget>
